--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>FULL STACK COURSE</title>
 </head>
 <body>
-    
+    <h1 style="color: rgb(30, 30, 179);font-size: 30px;">Heading One</h1>
+    <p style="font-size: 20px; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; ">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, quasi iure modi dolorem, voluptate reprehenderit autem eos officiis excepturi facilis doloremque qui maiores nobis totam praesentium alias, blanditiis fugit ullam.</p>
 </body>
 </html>
