Class Selector And Senority Order

--- a/index.html
+++ b/index.html
@@ -6,26 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACK COURSE</title>
     <style>
-        h1{
-            color: red;
-            font-size: 20px;
-        }
-        p{
-             color: blue /* !important*/;
-            font-weight: 100; 
-        }
-        #first{
-            color: saddlebrown;
-        }
+       #red{
+           color: seagreen;
+       }
+       .pink{
+           color: violet;
+       }
+       h1{
+           color: wheat;
+       }
     </style>
 </head>
 <body>
-    <h1>Senority Order - Inline css >ID Selector > Element Selector</h1>
-    <h1>Heading One</h1>
-    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, quasi iure modi dolorem, voluptate reprehenderit autem eos officiis excepturi facilis doloremque qui maiores nobis totam praesentium alias, blanditiis fugit ullam.</p>
-    <h1 style="color: salmon;" id="first">Heading One</h1>
-    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, quasi iure modi dolorem, voluptate reprehenderit autem eos officiis excepturi facilis doloremque qui maiores nobis totam praesentium alias, blanditiis fugit ullam.</p>
-   
+   <h1 style="color: sandybrown;" class="pink" id="red">STYLE>ID>CLASS>ELEMENT</h1>
 </body>
 </html>
 
