--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACK COURSE</title>
     <style>
-       #red{
-           color: seagreen;
-       }
-       .pink{
-           color: violet;
-       }
-       h1{
-           color: wheat;
+       img{
+           width: 500px;
+           /* border-width: 20px;
+           border-style: dashed;
+           border-color: tomato;*/
+           border: 20px dashed tomato;
+           border-top: 40px dashed tomato;
+           border-radius: 10px;
+           filter: brightness(2);
+           filter: blur(2px);
+           
        }
     </style>
 </head>
 <body>
-   <h1 style="color: sandybrown;" class="pink" id="red">STYLE>ID>CLASS>ELEMENT</h1>
+  <img src="https://miro.medium.com/max/1200/0*jS7tSte4izaNNu2W" alt="">
 </body>
 </html>
 
