--- a/index.html
+++ b/index.html
@@ -6,23 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FULL STACK COURSE</title>
     <style>
-       img{
-           width: 500px;
-           /* border-width: 20px;
-           border-style: dashed;
-           border-color: tomato;*/
-           border: 20px dashed tomato;
-           border-top: 40px dashed tomato;
-           border-radius: 10px;
-           filter: brightness(2);
-           filter: blur(2px);
-           
-       }
+      div{
+          height: 100px;
+          background-color: red;
+      }
+      span{
+        height: 100px;
+          background-color: red;
+      }
     </style>
 </head>
 <body>
-  <img src="https://miro.medium.com/max/1200/0*jS7tSte4izaNNu2W" alt="">
+    <div></div>
+    <span></span>
 </body>
+  
 </html>
 
 <!-- inline css has highest priority order, use !important to give priority to internal css over inline -->
+<!-- we can set height and width of inline element eg span here -->
