--- a/index.html
+++ b/index.html
@@ -9,16 +9,13 @@
   <style>
     .background{
       background-color: royalblue;
-      box-sizing: border-box; /*not height and width set for container not content  */
+      box-sizing: border-box;
       width: 250px;
       height: 250px;
-      /* padding-top:50px;
-      padding-right: 10px;
-      padding-bottom: 10px;
-      padding-left:30px; */
-      padding: 50px 10px 10px 30px;
-      /* padding: 50px;- means all of padding is same 
-      padding:top bottom and padding:right left , in case of if we want to use only two parameter     */
+      /* margin-right: 1000000000px; is not going to work  */
+      /* margin-left: 100000px; is work  */
+      
+   
     } 
 
   </style>
