--- a/index.html
+++ b/index.html
@@ -7,23 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FULL STACK COURSE</title>
   <style>
+    *{
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+        text-decoration: none;
+    }
+    body{
+      background-color: saddlebrown;
+    }
     .background{
       background-color: royalblue;
-      box-sizing: border-box;
       width: 250px;
       height: 250px;
-      /* margin-right: 1000000000px; is not going to work  */
-      /* margin-left: 100000px; is work  */
-      
-   
-    } 
+      padding: 50px;
+     } 
 
   </style>
 </head>
 
 <body>
   <div class="background">
-    <h2>lorem ip</h2>
+    <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus autem accusantium ab ea quaerat unde, incidunt esse inventore in! Soluta vitae id fuga. Cupiditate ullam</span>
+    <a href="afd">link</a>
   </div>
 
 </body>
