--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
         box-sizing: border-box;
         text-decoration: none;
     }
-    body{
-      background-color: saddlebrown;
-    }
     .parent{
       background-color: royalblue;
-      width: 80vw;  /* 80% of viewport width  */
-      height: 30vh; /* 30% of viewport height  */
+      padding: 20px;
+      width: 50vw;  
+      height: 60px; 
      } 
      .child{
        background-color: salmon;
        height: 20px;
+       width: 80%; /* scale element relative to its immediate parent */
+
      }
 
   </style>
