--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
   <title>FULL STACK COURSE</title>
   <style>
     *{
-        margin: 0px;
-        padding: 0px;
-        box-sizing: border-box;
-        text-decoration: none;
+      margin: 0px;
+      padding: 0px;
+      box-sizing: border-box;
     }
-    body{
-      height: 100vh;
-    }
-    .parent{
-      background-color: royalblue;
-      
-       height: 60%;  /* without setting parent height set:- it does not make any sense, means 60% of parent and here parent is body and body height depent on content */
-     } 
-    
+   h1{
+     background-color: blue;
+     color: blueviolet;
+     padding: 10px;
+     /* text-align: center; */
+     /* width: 80vw; */
+     /* we use text align on block element becoz text align is block property , here it will be center of 80vw*/
+     /* text-align: left; */
+     text-align: right;
+     height: 50vh;
+     padding-top: 40%;
+   }
   </style>
+ 
 </head>
 
 <body>
-  <div class="parent">
-   Lorem, ipsum.
-  </div>
-
+    <h1>Lorem, ipsum.</h1>
 </body>
 
 </html>
