--- a/index.html
+++ b/index.html
@@ -11,25 +11,38 @@
       margin: 0px;
       padding: 0px;
       box-sizing: border-box;
+      color: white;
     }
-   h1{
-     background-color: blue;
-     color: blueviolet;
-     padding: 10px;
-     /* text-align: center; */
-     /* width: 80vw; */
-     /* we use text align on block element becoz text align is block property , here it will be center of 80vw*/
-     /* text-align: left; */
-     text-align: right;
-     height: 50vh;
-     padding-top: 40%;
-   }
+    div{
+      height: 100px;
+      margin: 20px;
+      background-color: burlywood;
+    }
+    .two{
+      /* position: static; is default positionfor each and every element */
+      background-color: violet;
+      /* position: static;
+      left: 100px;
+      top: 100px; - does not happen anything becoz position is static */
+      position: relative;
+      /* its relative to itself */
+      top: 100px;
+      /* left: 40px; */
+      /* right: 40px; */
+
+    }
+  
   </style>
  
 </head>
 
 <body>
-    <h1>Lorem, ipsum.</h1>
+  <div class="one">
+    <h2>Heading of div 1</h2>
+  </div>
+  <div class="two">
+    <h2>Heading of div 2</h2>
+  </div>
 </body>
 
 </html>
