--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
     background-color: black;
     position: relative;
     display: flex;
-    /* flexbox is parent property  */
     flex-direction: row; 
-    justify-content: center;
-    /* justify-content work along primary axis */
-    align-items: center;
-    /* align-items work along x and y axis both  */
+    flex-wrap: wrap;
+    justify-content: space-around;
+   
   }
   .child{
     width: 100px;
@@ -34,6 +32,7 @@
     left: 300px; */
     /*above is native approach for align yellow box in center of black box  */
     margin: 10px;
+    /* align-items: stretch; */
     
   }
  </style>
@@ -41,6 +40,14 @@
 
 <body>
  <div class="parent">
+   <div class="child" style="background-color: orange;"></div>
+   <div class="child" style="background-color: orangered;"></div>
+   <div class="child" style="background-color: orchid;"></div>
+   
+   <div class="child" style="background-color: orange;"></div>
+   <div class="child" style="background-color: orangered;"></div>
+   <div class="child" style="background-color: orchid;"></div>
+   
    <div class="child" style="background-color: orange;"></div>
    <div class="child" style="background-color: orangered;"></div>
    <div class="child" style="background-color: orchid;"></div>
