--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
       transition-duration: 0.5s;
       /* transition-timing-function: linear; */
       transition-timing-function: ease-in;
+      transition-delay: 2s;
     }
     div.parent:hover div.child{
       background-color: red;
       /* transform: rotateY(120deg); */
       /* transform: scale(0.4); */
       transform: translate(500px);
+      /* transition-delay: 2s; */
     }
   </style>
 </head>
