--- a/index.html
+++ b/index.html
@@ -2,39 +2,69 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FULL STACK COURSE</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Full Stack Course</title>
   <style>
     * {
-      margin: 5px;
-      padding: 0;
+      margin: 0px;
+      padding: 0px;
       box-sizing: border-box;
     }
 
     div.parent {
-      background-color: black;
-      min-height: 200px;
+      height: 500px;
+      background-color: #111;
     }
 
     div.child {
-      background-color: blue;
-      height: 100px;
       width: 100px;
-      border-radius: 100%;
-      /* transform: rotateY(100deg); */
-      transition-duration: 0.5s;
-      /* transition-timing-function: linear; */
-      transition-timing-function: ease-in;
-      transition-delay: 2s;
+      height: 100px;
+      background-color: #ffbf00;
+      border-radius: 50%;
+      /* transition: 1s ease; */
+      animation:1s move;
+      animation-fill-mode: forwards;
+      animation-iteration-count: 3;
+      animation-direction: reverse;
+
     }
-    div.parent:hover div.child{
-      background-color: red;
-      /* transform: rotateY(120deg); */
-      /* transform: scale(0.4); */
-      transform: translate(500px);
-      /* transition-delay: 2s; */
+    div.child-2 {
+      width: 100px;
+      height: 100px;
+      background-color: #ffbf00;
+      border-radius: 50%;
+      /* transition: 1s ease; */
+      animation:1s move;
+      animation-fill-mode: forwards;
+      animation-iteration-count: 3;
+      animation-direction: reverse;
+
+      animation-delay: 1s;
+    }
+
+    /* div.parent:hover div.child {
+      /* transform: translateX(80vw); */
+      /* background-color: blue; */
+      /* animation:1s move;
+      animation-fill-mode: forwards;
+
+     
+    }  */
+    @keyframes move {
+      0% {
+        transform: translateY(0vw);
+      }
+      50%{
+        transform: translateX(300px);
+        background-color: blue;
+      }
+      100% {
+        transform: translateY(400px);
+        background-color: blueviolet;
+      }
+
     }
   </style>
 </head>
@@ -42,8 +72,8 @@
 <body>
   <div class="parent">
     <div class="child"></div>
+    <div class="child-2"></div>
   </div>
-
 </body>
 
 </html>
