--- a/index.html
+++ b/index.html
@@ -2,78 +2,42 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Full Stack Course</title>
-  <style>
-    * {
-      margin: 0px;
-      padding: 0px;
-      box-sizing: border-box;
-    }
-
-    div.parent {
-      height: 500px;
-      background-color: #111;
-    }
-
-    div.child {
-      width: 100px;
-      height: 100px;
-      background-color: #ffbf00;
-      border-radius: 50%;
-      /* transition: 1s ease; */
-      animation:1s move;
-      animation-fill-mode: forwards;
-      animation-iteration-count: 3;
-      animation-direction: reverse;
-
-    }
-    div.child-2 {
-      width: 100px;
-      height: 100px;
-      background-color: #ffbf00;
-      border-radius: 50%;
-      /* transition: 1s ease; */
-      animation:1s move;
-      animation-fill-mode: forwards;
-      animation-iteration-count: 3;
-      animation-direction: reverse;
-
-      animation-delay: 1s;
-    }
-
-    /* div.parent:hover div.child {
-      /* transform: translateX(80vw); */
-      /* background-color: blue; */
-      /* animation:1s move;
-      animation-fill-mode: forwards;
-
-     
-    }  */
-    @keyframes move {
-      0% {
-        transform: translateY(0vw);
-      }
-      50%{
-        transform: translateX(300px);
-        background-color: blue;
-      }
-      100% {
-        transform: translateY(400px);
-        background-color: blueviolet;
-      }
-
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/styles.css" />
+    <title>Todo list</title>
+    <style>
+        .parent {
+            background-color: orange;
+            display: flex;
+            justify-content: right;
+            align-items: center;
+            height: 300px;
+        }
+        
+        .child {
+            height: 100px;
+            width: 100px;
+            background: #000000;
+            /* display: none; */
+            /* opacity: 0;
+            transition: 1s ease; */
+        }
+        .parent:hover .child{
+          /* display: block; */
+          /* opacity: 1; */
+          /* display: none; */
+          visibility: hidden;
+        }
+    </style>
 </head>
 
 <body>
-  <div class="parent">
-    <div class="child"></div>
-    <div class="child-2"></div>
-  </div>
+    <div class="parent">
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium sed minima mollitia, dignissimos eius quidem dicta magni veritatis dolore earum dolor unde beatae! Voluptas deserunt necessitatibus tempore explicabo quod, iste itaque ipsa, quia reiciendis ipsam ab nemo nobis labore distinctio sunt nihil 
+        <div class="child"></div>
+    </div>
 </body>
 
 </html>
