--- a/index.html
+++ b/index.html
@@ -2,17 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/styles.css" />
-    <title>Full Stack Course : JavaScript</title>
-    <!-- to link js file use script not link  -->
-     <script src="./app.js"></script>
+    <title>JavaScript</title>
+    <script defer src="./app.js"></script>
 </head>
 
 <body>
-  
+   
+        <h2 id="heading">I'm a heading</h2>
+        <p class="para">I'm a paragraph</p>
+        <a class="para">I'm anchor</a>
+        
 </body>
 
 </html>
