--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
 
 <body>
    
-        <h2 class="one two three four" id="heading">I'm a heading</h2>
+        <!-- <h2 class="one two three four" id="heading">I'm a heading</h2>
         <p class="para">I'm a paragraph</p>
-        <a class="para">I'm anchor</a>
+        <a class="para">I'm anchor</a> -->
+        <ul><li>one</li></ul>
         
 </body>
 
