Dark Mode Concept

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <title>JavaScript</title>
     <script defer src="./app.js"></script>
     <style>
-        .animate {
-            transform: translateX(100px);
+        body {
+            background-color: #fff;
+            height: 100vh;
         }
         
         .dark {
@@ -17,9 +18,8 @@
 </head>
 
 <body>
-    <input type="text" />
-    <button>Add</button>
-    <ul></ul>
+    <h1>Heading</h1>
+    <button>Mode</button>
 </body>
 
 </html>
