--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <input type="number" />
     <br />
     <button id="add">Add</button>
-    <button id="multiply">Multiply</button>
+    <button id="substract">Multiply</button>
+    <button id="substract">Substract</button>
     <br />
     <div>
         Result :
