todo list delete part

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html lang="en">
 
 <head>
-    <title>JavaScript</title>
+    <title>Todo list Part</title>
     <script defer src="./app.js"></script>
-    <style></style>
+    <style>
+        .animate {
+            transform: translateX(100px);
+        }
+        
+        .dark {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
-  
+    <input type="text" />
+    <button>Add</button>
+    <ul></ul>
 </body>
 
 </html>
